# Binary_file_comparator

./: CMakeLists.txt  FileComparer.pro  README.md  build_all.sh  dialogcompare.cpp  dialogcompare.h  dialogcompare.ui  hexutility.cpp  hexutility.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  uninstall.sh
other/: FileComparator.desktop
